--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
-  background-color: #f3f4f6; /* لون رصاصي فاتح للخلفية */
+  background-color: #f9fafb; /* لون رمادي فاتح جداً للخلفية */
 }
